2009-09-11  Marek Safar  <marek.safar@gmail.com>

	* eval.cs: Exposed MessageOutput instead of cleaning up eval API.

2009-09-09  Marek Safar  <marek.safar@gmail.com>

	* eval.cs, report.cs: Use Console.Out for all eval error or warning
	output.

2009-09-09  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #518707
	* expression.cs (Is): Optimize only generic parameter type
	expression probing value type generic parameter.

2009-09-09  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #532571
	* ecore.cs: Check for simple name type arguments used with
	non-generic type.

2009-09-08  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #497421
	* generic.cs (CheckConstraint): Don't use buildin types to check for
	parameterless constructor.

2009-09-08  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #537402
	* generic.cs (CheckConstraint): Correctly inflate generic type
	arguments when checking generic method. 

2009-09-08  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #536463
	* decl.cs (AddToContainer): Don't report collision between explicit
	and parameterless non-explicit members.

2009-09-08  Marek Safar  <marek.safar@gmail.com>

	* eval.cs: Reset more static stuff.

2009-09-07  Marek Safar  <marek.safar@gmail.com>

	A fix for bug #324625
	* expression.cs, ecore.cs: Create nested generic type expression
	using declaring and not current type.

2009-09-07  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Changed Report class to accept various output printers and
	be an instance class. An expression resolver can now use different
	message reporter for each call and Report.Error can safely throw
	an exception. Part of ongoing work to turn mcs into proper library.

2009-09-04  Marek Safar  <marek.safar@gmail.com>

	* statement.cs, ecore.cs: Removed error reporting from emit code.

2009-09-04  Marek Safar  <marek.safar@gmail.com>

	* cs-parser.jay, parameter.cs: Moved parser check out of constructor

2009-09-03  Marek Safar  <marek.safar@gmail.com>
